<resources>
    <string name="app_name">UBICOMP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_data">Sensor Data</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="settings">Settings</string>
    <string name="bluetoothDisabled">To see devices, turn Bluetooth on.</string>
    <string name="paired_devices">Paired Devices:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="set_mode">Set mode</string>
    <string name="google_maps_key">AIzaSyCbAAOynB6XivxhqULvC1WfC4buhtR0SeU</string>
    <string name="side_menu_radius">Radius</string>
    <string name="side_menu_meters">meters</string>
    <string name="side_menu_from">from</string>
    <string name="side_menu_to">to</string>
    <string name="side_menu_filter">Search</string>
    <string name="side_menu_refresh">Refresh</string>
    <string name="side_menu_temperature">Temperature</string>
    <string name="side_menu_humidity">Humidity</string>
    <string name="side_menu_air_quality">Air Quality</string>
    <string name="ip_address">IP address</string>
    <string name="sync_timer">Sync interval in minutes</string>
    <string name="settings_button">SUBMIT</string>
    <string name="close">Close</string>
    <string name="mode_off">Off</string>
    <string name="mode_automatic">Automatic</string>
    <string name="mode_manual">Manual</string>
    <string name="last_result">Last result:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="air_quality">Air quality:</string>
    <string name="timestamp">Date:</string>
    <string name="select_date">Select date</string>
</resources>
