<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tomasevic.ubicomp.SettingsActivity">

    <TextView
        android:id="@+id/ipText"
        android:text="@string/ip_address"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/ip_address"
        android:maxLength="15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address"
        android:inputType="textUri"
        android:layout_below="@+id/ipText"/>

    <TextView
        android:id="@+id/intervalText"
        android:text="@string/sync_timer"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip_address"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/sync_timer"
        android:layout_below="@+id/intervalText"
        android:maxLength="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sync_timer"
        android:inputType="number"/>

    <Button
        android:id="@+id/settings_button"
        android:text="@string/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
