<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main" >

        <LinearLayout
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/side_menu_radius"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editRadius"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:hint="@string/side_menu_meters"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

            <include android:id="@+id/includeTemperature"
                layout="@layout/item_side_menu" />

            <include android:id="@+id/includeHumidity"
                layout="@layout/item_side_menu" />

            <include android:id="@+id/includeAirQuality"
                layout="@layout/item_side_menu" />

            <Button
                android:id="@+id/btnFilter"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/side_menu_filter"/>

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/side_menu_refresh"/>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
